# shzgpt-storage

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  uwsgi.ini
SHZgptServer/: api.py  asgi.py  from_env.py  settings.py  urls.py  wsgi.py
bot/: admin.py  api.py  models.py  serializers.py
bot/migrations/: 0001_initial.py  0002_remove_apikey_model_apikey_vendor.py  0003_modality_aimodel_created_at_aimodel_enabled_and_more.py  0004_bot.py  0005_bot_owner_bot_bot_bot_bot_id_d44bce_idx.py  0006_remove_bot_bot_bot_bot_id_d44bce_idx_and_more.py
chat/: admin.py  api.py  consumers.py  models.py  paginators.py  permissions.py  routing.py  schema.py  serializer.py  serializers.py  urls.py  utils.py  views.py
chat/migrations/: 0001_initial.py  0002_rename_character_chat_role_alter_chat_tokens.py  0002_rename_chat_message.py  0003_chatroom_chatroom_id_message_message_id_and_more.py  0003_prompt_name.py  0004_chatroom_last_used_time_alter_prompt_usage_count.py  0004_message_role_id_alter_message_role.py  0005_alter_chatroom_last_used_time_chatuser.py  0005_chatroom_bots.py  0006_chatuser_created_at_chatuser_name.py  0007_chatroom_owner.py  0008_chatuser_apikey.py  0009_remove_chatuser_apikey_apikey.py  0010_aivendor_aimodel_apikey_model.py  0011_prompttopic_owner.py  0012_aimodel_model_id_aivendor_vendor_id.py
chat/tests/: test_apikey.py  test_auth.py  test_chat.py  test_chat_history.py  test_chatroom.py  test_consumer.py
common/: api_wrapper.py  llm_factory.py  llm_vendor.py  pb  tokenizer.py  utils.py
common/pb/: message_pb2.py
common/tests/: test_llm_vendor.py
docker/: Dockerfile
libs/: crawler.py
member/: admin.py  api.py  models.py  serializers.py
member/migrations/: 0001_initial.py
member/tests/: test_auth.py
